# feMorph

./: CMakeLists.txt  CMakeLists.txt.user.3c5dd79  CMakeLists.txt.user.423c732  CMakeLists.txt.user.b55197c.2.7pre1  README.md  check.chk  femConstants.h  femEdge.h  femElement.cpp  femElement.h  femException.cpp  femException.h  femFace.cpp  femFace.h  femGrid.cpp  femGrid.h  femGridCell.cpp  femHexa8.cpp  femIncompressibleSolver.cpp  femInputData.cpp  femInputData.h  femIntegrationRule.cpp  femIntegrationRule.h  femMatrix.cpp  femMatrix.h  femModel.cpp  femModel.h  femModelSequence.cpp  femModelSequence.h  femModelSlice.cpp  femModelSlice.h  femNode.cpp  femNode.h  femOption.cpp  femOption.h  femPoint.cpp  femProgramOptions.cpp  femProgramOptions.h  femProperty.h  femQuad4.cpp  (+20 more)
docs/source/: conf.py  index.rst
docs/source/content/: about.rst  freeForm.rst  installation.rst
examples/: Cylinder.connectivity  Cylinder.coordinates  stenosis_model_2.connectivity  stenosis_model_2.coordinates  stenosis_model_2.displacements
examples/02_explicitVMS/: create_exVMS_simul.py  model.txt  steady.svpre
examples/02_explicitVMS/mesh-complete/mesh-surfaces/: inflow.vtp
examples/02_explicit_fluid_VMS/01_cylinder/: .gitignore  bct.vtp  create_exVMS_simul.py
examples/02_explicit_fluid_VMS/01_cylinder/mesh-complete/: mesh-complete.mesh.vtu
examples/02_explicit_fluid_VMS/01_cylinder/mesh-complete/mesh-surfaces/: outlet.vtp
examples/02_explicit_fluid_VMS/02_lid_driven_cavity_coarse/: .gitignore  create_exVMS_simul.py  model.txt  top_bc.vtp  top_surface.vtp  walls_bc.vtp
examples/02_explicit_fluid_VMS/03_lid_driven_cavity_medium/: model.txt  top.vtp  top_bc.vtp  untitled.geo  untitled.msh  walls.vtp
examples/02_explicit_fluid_VMS/04_patient_specific/: create_exVMS_simul.py  run_model.sh
examples/02_explicit_fluid_VMS/04_patient_specific/mesh/: bct.vtp  mesh-complete.exterior.vtp  outlets_combined.vtp  walls_combined.vtp
examples/02_explicit_fluid_VMS/04_patient_specific/mesh/mesh-surfaces/: IMA.vtp  L_ext_iliac.vtp  L_inf_renal.vtp  L_int_iliac.vtp  L_int_iliac_br1.vtp  L_int_iliac_br2.vtp  L_sup_renal.vtp  R_ext_iliac.vtp  R_inf_renal.vtp  R_int_iliac.vtp  R_int_iliac_br1.vtp  R_int_iliac_br2.vtp  R_sup_renal.vtp  SMA.vtp  SMA_br1.vtp  hepatic_br1.vtp  hepatic_br2.vtp  inflow.vtp  splenic_br1.vtp  splenic_br2.vtp
examples/02_explicit_fluid_VMS/05_2D_hexa/: .gitignore  complete.vtk  create_exVMS_simul.py  model.txt  rectangle_hexa.geo
examples/02_explicit_fluid_VMS/06_2D_hexa_lid_driven_cavity/: .gitignore  add_globalID.py  complete.vtk  create_exVMS_simul.py  fluid.vtu  lid_driven_cavity_hexa_2D.geo  lumped_mass.txt  wall_bottom.vtp  wall_left.vtp  wall_right.vtp  wall_top.vtp  z_wall_1.vtp  z_wall_2.vtp
examples/02_explicit_fluid_VMS/07_2D_column_compression/: .gitignore  create_exVMS_simul.py  fluid.vtu  inlet.vtp  outlet.vtp  run_simul.sh  wall_bottom.vtp  wall_top.vtp  z_wall_1.vtp  z_wall_2.vtp
examples/02_explicit_fluid_VMS/08_2D_hexa_ldc_mesh2/: .gitignore  complete.vtk  create_exVMS_simul.py  ldc_hexa_mesh2.geo  lumped_mass.txt  wall_bottom.vtp  z_wall_1.vtp
examples/02_explicit_fluid_VMS/08_2D_hexa_ldc_mesh2/07_comparison/: hor005_10K.csv  hor005_1K.csv  hor01_10K.csv  hor01_1K.csv  hor05_100.csv  hor05_10K.csv  hor05_1K.csv  hor095_10K.csv  hor095_1K.csv  hor09_10K.csv  hor09_1K.csv  make_plot_100.py  make_plot_10K.py  make_plot_1K.py  re100_central_slices.pvsm  re_1000_horizontal.txt  re_1000_vertical.txt  re_100_horizontal.txt  re_100_vertical.txt  re_10K_horizontal.txt  re_10K_vertical.txt  vert005_10K.csv  vert005_1K.csv  vert01_10K.csv  vert01_1K.csv  vert05_100.csv  vert05_10K.csv  vert05_1K.csv  vert095_10K.csv  vert095_1K.csv  vert09_10K.csv  vert09_1K.csv
examples/02_explicit_fluid_VMS/09_ldc_mesh2_local_lam/: create_fem_file_re100.py  create_simul_campaign.py  fluid.vtu  run_script.sh  run_simul_crc.sh  wall_left.vtp  wall_right.vtp  wall_top.vtp  z_wall_2.vtp
examples/03_lid_driven_cavity/01_coarse/: cube.vtu  pre_process_ldc.py  walls.vtp  walls_out.vtp
examples/03_lid_driven_cavity/02_medium/: create_exVMS_simul.py  cube_medium.vtu  model.txt  pre_process_ldc.py  walls_bc.vtp
src/: CMakeLists.txt  Sch_Numeric.pas  femCMMExplicitSolidSolver.cpp  femCMMExplicitSolidSolver.h  femConstants.h  femEdge.cpp  femElement.cpp  femElement.h  femException.cpp  femFFDOptions.cpp  femFFDOptions.h  femFace.cpp  femGPUFluidSolver.cpp  femGPUFluidSolver.h  femGrid.h  femGridCell.h  femHexa8.cpp  femIncompressibleSolver.cpp  femIncompressibleSolver.h  femInputData.cpp  femInputData.h  femIntegrationRule.h  femMatrix.cpp  femMatrix.h  femModel.cpp  femModel.h  femModelSequence.cpp  femModelSequence.h  femModelSlice.cpp  femNode.cpp  femNode.h  femOption.cpp  femPoint.h  femPointGrid.cpp  femPointGrid.h  femProgramOptions.cpp  femProgramOptions.h  femProperty.cpp  femQuad4.cpp  femResult.h  (+20 more)
src/trilinos/: femTrilinosMatrix.cpp  femTrilinosMatrix.h  femTrilinosVector.cpp  femTrilinosVector.h
untitled1/: CMakeLists.txt
