PROJECT(feMorph)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

AUX_SOURCE_DIRECTORY(. SRC_LIST)



SET( SCH_FLAGS "-pg -O3 -std=c++0x" )
SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${SCH_FLAGS}" )
SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${SCH_FLAGS}" )

IF(APPLE)
  MESSAGE("APPLE Mode")
  INCLUDE_DIRECTORIES("." "/Users/danschi/Documents/03_software/12_CSparse/include")
  LINK_DIRECTORIES("/Users/danschi/Documents/03_software/12_CSparse/lib")
ENDIF()

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} armadillo csparse)


